--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weatherapp</title>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Albert+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Albert+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/c14cd0a378.js"
       crossorigin="anonymous"
@@ -39,7 +42,12 @@
       <div class="row body">
         <div class="col-12 search">
           <form action="" class="search-form" id="search-form">
-            <input type="text" placeholder="Enter your city" class="city-box" id="city-input"/>
+            <input
+              type="text"
+              placeholder="Enter your city"
+              class="city-box"
+              id="city-input"
+            />
             <button type="submit" class="search-button">Search</button>
           </form>
           <button class="location-pin" id="location-pin">
@@ -50,55 +58,65 @@
           <h1 class="current-temp" id="current-temp">14°</h1>
         </div>
         <div class="col-7">
-           <h2 class="city" id="current-city">Sydney</h2>
+          <h2 class="city" id="current-city">Sydney</h2>
           <h5 class="date-time" id="current-date-time"></h5>
-          <br>  
+          <br />
           <ul>
-              <li id="weather-overall">Cloudy</li>
-              <li>
-                <i class="fa-solid fa-temperature-three-quarters"></i>
-                <span id="min-temp">10</span> /
-                <strong id="max-temp">16</strong>
-              </li>
-              <li><i class="fa-solid fa-cloud-rain"></i> <span id="humidity">30</span>% humidity</li>
-              <li><i class="fa-solid fa-wind"></i><span id="wind">20</span>km/hr</li>
-            </ul>
-          </div>
+            <li id="weather-overall">Cloudy</li>
+            <li>
+              <i class="fa-solid fa-temperature-three-quarters"></i>
+              <span id="min-temp">10</span> /
+              <strong id="max-temp">16</strong>
+            </li>
+            <li>
+              <i class="fa-solid fa-cloud-rain"></i>
+              <span id="humidity">30</span>% humidity
+            </li>
+            <li>
+              <i class="fa-solid fa-wind"></i><span id="wind">20</span>km/hr
+            </li>
+          </ul>
         </div>
+      </div>
       <div class="row forecast">
         <div class="col">
-                  <div class="weather-icon"><i class="fa-solid fa-cloud-sun"></i></div>
-         <p>Sunday</p> 
-        <span class="future-temp">16°</span>
+          <div class="weather-icon"><i class="fa-solid fa-cloud-sun"></i></div>
+          <p>Sunday</p>
+          <span class="future-temp">16°</span>
         </div>
         <div class="col">
-           <div class="weather-icon"><i class="fa-solid fa-sun"></i></div>
-          <p>Monday</p> 
-        <span class="future-temp">20°</span>
-        </div>
-        <div class="col">
-           <div class="weather-icon">
-            <i class="fa-solid fa-cloud-sun"></i>
-          </div>
-          <p>Tuesday</p> 
-        <span class="future-temp">17°</span>
+          <div class="weather-icon"><i class="fa-solid fa-sun"></i></div>
+          <p>Monday</p>
+          <span class="future-temp">20°</span>
         </div>
         <div class="col">
           <div class="weather-icon">
-         <i class="fa-solid fa-cloud"></i></div>
-          <p>Wednesday</p> 
-        <span class="future-temp">14°</span>
+            <i class="fa-solid fa-cloud-sun"></i>
+          </div>
+          <p>Tuesday</p>
+          <span class="future-temp">17°</span>
+        </div>
+        <div class="col">
+          <div class="weather-icon">
+            <i class="fa-solid fa-cloud"></i>
+          </div>
+          <p>Wednesday</p>
+          <span class="future-temp">14°</span>
         </div>
         <div class="col">
           <div class="weather-icon"><i class="fa-solid fa-cloud-sun"></i></div>
-          <p>Thursday</p> 
-        <span class="future-temp">18°</span>
+          <p>Thursday</p>
+          <span class="future-temp">18°</span>
+        </div>
+        <div class="col-12">
+          <p>
+            <a href="https://github.com/bianca-tee" target="_blank"
+              >Link to my github</a
+            >
+          </p>
         </div>
       </div>
     </div>
-  </div>
-</div>
-<script src="script.js">
-</script>
+    <script src="script.js"></script>
   </body>
 </html>
