Link to my github changed to <small>

--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
           <span class="future-temp">18°</span>
         </div>
         <div class="col-12">
-          <p>
+          <small>
             <a href="https://github.com/bianca-tee" target="_blank"
-              >Link to my github</a
+              >Open-source code</a
             >
-          </p>
+            by Bianca Treu
+          </small>
         </div>
       </div>
     </div>
