Removed icons from list of weather characteristics

--- a/index.html
+++ b/index.html
@@ -64,17 +64,11 @@
           <ul>
             <li id="weather-overall">Cloudy</li>
             <li>
-              <i class="fa-solid fa-temperature-three-quarters"></i>
               <span id="min-temp">10</span> /
               <strong id="max-temp">16</strong>
             </li>
-            <li>
-              <i class="fa-solid fa-cloud-rain"></i>
-              <span id="humidity">30</span>% humidity
-            </li>
-            <li>
-              <i class="fa-solid fa-wind"></i><span id="wind">20</span>km/hr
-            </li>
+            <li><span id="humidity">30</span>% humidity</li>
+            <li><span id="wind">20</span>km/hr</li>
           </ul>
         </div>
       </div>
