Added img element for weather icon to html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           </button>
         </div>
         <div class="col-5">
+          <img src="" alt="" class="main-icon" id="icon" />
           <h1 class="current-temp" id="current-temp">14°</h1>
         </div>
         <div class="col-7">
