Rearranged columns to accommodate unit switch
Unit switch not yet functional or styled

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             <i class="fa-solid fa-map-pin pin"></i>
           </button>
         </div>
-        <div class="col-12 city-col">
-          <h2 class="city" id="current-city">Sydney</h2>
-          <h5 class="date-time" id="current-date-time"></h5>
+        <div class="row">
+          <div class="col-6 city-col">
+            <h2 class="city" id="current-city">Sydney</h2>
+            <h5 class="date-time" id="current-date-time"></h5>
+          </div>
+          <div class="col-6">C / F</div>
         </div>
         <div class="col-8">
           <div class="row">
