Added js function to C/F switch
Note that the C/F switch only works when a city is searched. Does not currently work on initial page which is based on fake data not API data. Will need to set a city as the default in future

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             <h2 class="city" id="current-city">Sydney</h2>
             <h5 class="date-time" id="current-date-time"></h5>
           </div>
-          <div class="col-6">C / F</div>
+          <div class="col-6">
+            <a href="#" id="celsius">C</a> / <a href="#" id="fahrenheit">F</a>
+          </div>
         </div>
         <div class="col-8">
           <div class="row">
