Moved forecast code from HTML to JS
Used forEach to achieve this
Currently operating with fake data
Working on accessing data via API

--- a/index.html
+++ b/index.html
@@ -85,35 +85,7 @@
           </ul>
         </div>
       </div>
-      <div class="row forecast">
-        <div class="col">
-          <div class="weather-icon"><i class="fa-solid fa-cloud-sun"></i></div>
-          <p>Sunday</p>
-          <span class="future-temp">16°</span>
-        </div>
-        <div class="col">
-          <div class="weather-icon"><i class="fa-solid fa-sun"></i></div>
-          <p>Monday</p>
-          <span class="future-temp">20°</span>
-        </div>
-        <div class="col">
-          <div class="weather-icon">
-            <i class="fa-solid fa-cloud-sun"></i>
-          </div>
-          <p>Tuesday</p>
-          <span class="future-temp">17°</span>
-        </div>
-        <div class="col">
-          <div class="weather-icon">
-            <i class="fa-solid fa-cloud"></i>
-          </div>
-          <p>Wednesday</p>
-          <span class="future-temp">14°</span>
-        </div>
-        <div class="col">
-          <div class="weather-icon"><i class="fa-solid fa-cloud-sun"></i></div>
-          <p>Thursday</p>
-          <span class="future-temp">18°</span>
+      <div class="forecast" id="forecast">
         </div>
         <div class="col-12">
           <small>
