--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
             <h5 class="date-time" id="current-date-time"></h5>
           </div>
           <div class="col-6">
-            <a href="#" id="celsius">C</a> / <a href="#" id="fahrenheit">F</a>
           </div>
         </div>
         <div class="col-8">
           <div class="row">
             <div class="col-7">
-              <h1 class="current-temp" id="current-temp">14°</h1>
+              <h1 class="current-temp" id="current-temp">14°C</h1>
             </div>
             <div class="col-5">
               <img src="" alt="" class="main-icon" id="icon" />
