--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <strong id="max-temp">16</strong>
             </li>
             <li><span id="humidity">30</span>% humidity</li>
-            <li><span id="wind">20</span>km/hr</li>
+            <li><span id="wind">20</span>m/s</li>
           </ul>
         </div>
       </div>
