Hid forecast function in Javascript, and added fake data to html forecast
To help tinker with layout, as was not working with javascript alone

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             <h2 class="city" id="current-city">Sydney</h2>
             <h5 class="date-time" id="current-date-time"></h5>
           </div>
-          <div class="col-6">
-          </div>
+          <div class="col-6"></div>
         </div>
         <div class="col-8">
           <div class="row">
@@ -84,7 +83,51 @@
           </ul>
         </div>
       </div>
-      <div class="forecast" id="forecast">
+        <div class="row" id="forecast" class="forecast">
+        <div class="col">
+          <div class="weather-forecast-day">Mon</div>
+          <img src="https://www.weather.shecodes.io/images/logo.png" alt="" width="20" />
+          <div class="weather-forecast-temperatures">
+            <span class="forecast-temp-min"> 12°</span>
+            /
+            <strong class="forecast-temp-max">16°</strong>
+          </div>
+        </div>
+       <div class="col">
+          <div class="weather-forecast-day">Mon</div>
+          <img src="https://www.weather.shecodes.io/images/logo.png" alt="" width="20" />
+          <div class="weather-forecast-temperatures">
+            <span class="forecast-temp-min"> 12°</span>
+            /
+            <strong class="forecast-temp-max">16°</strong>
+          </div>
+        </div>
+        <div class="col">
+          <div class="weather-forecast-day">Mon</div>
+          <img src="https://www.weather.shecodes.io/images/logo.png" alt="" width="20" />
+          <div class="weather-forecast-temperatures">
+            <span class="forecast-temp-min"> 12°</span>
+            /
+            <strong class="forecast-temp-max">16°</strong>
+          </div>
+        </div><div class="col">
+          <div class="weather-forecast-day">Mon</div>
+          <img src="https://www.weather.shecodes.io/images/logo.png" alt="" width="20" />
+          <div class="weather-forecast-temperatures">
+            <span class="forecast-temp-min"> 12°</span>
+            /
+            <strong class="forecast-temp-max">16°</strong>
+          </div>
+        </div><div class="col">
+          <div class="weather-forecast-day">Mon</div>
+          <img src="https://www.weather.shecodes.io/images/logo.png" alt="" width="20" />
+          <div class="weather-forecast-temperatures">
+            <span class="forecast-temp-min"> 12°</span>
+            /
+            <strong class="forecast-temp-max">16°</strong>
+          </div>
+        </div>
+        </div>
         </div>
         <div class="col-12">
           <small>
