Max/min temp in forecast flipped, max changed to <strong>, padding added to forecast

--- a/index.html
+++ b/index.html
@@ -75,24 +75,22 @@
           <ul>
             <li id="weather-overall">Cloudy</li>
             <li>
-              <span id="min-temp">10</span> /
-              <strong id="max-temp">16</strong>
+              <span id="min-temp"></span> /
+              <strong id="max-temp"></strong>
             </li>
-            <li><span id="humidity">30</span>% humidity</li>
-            <li><span id="wind">20</span>m/s</li>
+            <li><span id="humidity"></span>% humidity</li>
+            <li><span id="wind"></span>m/s</li>
           </ul>
         </div>
       </div>
-        <div class="row" id="forecast" class="forecast">
-        </div>
-        <div class="col-12">
-          <small>
-            <a href="https://github.com/bianca-tee" target="_blank"
-              >Open-source code</a
-            >
-            by Bianca Treu
-          </small>
-        </div>
+      <div id="forecast" class="forecast"></div>
+      <div class="col-12">
+        <small>
+          <a href="https://github.com/bianca-tee" target="_blank"
+            >Open-source code</a
+          >
+          by Bianca Treu
+        </small>
       </div>
     </div>
     <script src="script.js"></script>
