--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         </div>
         <div class="col-8">
           <div class="row">
-            <div class="col-7">
-              <h1 class="current-temp" id="current-temp">14°C</h1>
+            <div class="col-9">
+              <div class="current-temp" id="current-temp"></div>
+              <span class="current-temp-units">°C</span>
             </div>
-            <div class="col-5">
+            <div class="col-3">
               <img src="" alt="" class="main-icon" id="icon" />
             </div>
           </div>
@@ -79,7 +80,7 @@
               <strong id="max-temp"></strong>
             </li>
             <li><span id="humidity"></span>% humidity</li>
-            <li><span id="wind"></span>m/s</li>
+            <li><span id="wind"></span>m/s wind</li>
           </ul>
         </div>
       </div>
