Removed padding and margin
Removed from CSS styling, and mx-0 added to rows to ensure all fit within the container (some overlap previously). Deleted previous CSS styling that applied to classes that no longer exist

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="weather-app">
+    <div class="container weather-app">
         <div class="row header">
           <div class="col-12">
             <h1 class="title">weather<span class="title-app">app</span></h1>
@@ -59,7 +58,7 @@
             <h2 class="city" id="current-city">Sydney</h2>
             <h5 class="date-time" id="current-date-time"></h5>
           </div>
-        <div class="row">
+        <div class="row mx-0">
               <div class="col-6">
                 <div class="current-temp" id="current-temp"></div>
                 <span class="current-temp-units">°C</span>
@@ -79,7 +78,7 @@
             </ul>
           </div>
         </div>
-        <div id="forecast" class="forecast"></div>
+        <div id="forecast" class="row mx-0 forecast"></div>
         <div class="col-12">
           <small>
             <a href="https://github.com/bianca-tee" target="_blank"
@@ -89,7 +88,6 @@
           </small>
         </div>
       </div>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
